--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^17.2.4",
     "express": "^4.16.3",
     "express-graphql": "^0.12.0",
     "express-validator": "^7.3.1",
