--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 CONNECTION_STRING=mongodb+srv://theobelo25_db_user:GWRdm1B06tWMCj0Q@book-shop-db.58ldko5.mongodb.net/nodejs-social?appName=nodejs-social
 PORT=8080
+JWT_SECRET=alexanderisagoodboy
+CLIENT_HOST=http://localhost:3000
